package gameLaby.laby;

/**
 * classe representant un monstre
 */
public class Monstre extends Entite {
    /**
     * creer un monstre
     * @param dx position x de l'entite
     * @param dy position y de l'entite
     */
    public Monstre(int dx, int dy) {
        super(dx, dy, 10, 2);
    }
}
