@startuml
title Attaque et Armes

'''classe'''


package moteurJeu {

interface Jeu{
+ init()
+ update(seconds: double, clavier: Clavier)
+ etreFini(): boolean
}


interface DessinJeu {
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}
}


package gameLaby {


class Labyrinthe{
  + murs : boolean[][]
  + getSuivant(x : int, y : int, action : String) : int[]
  + Labyrinthe(nom : String)
  + deplacerPerso(action : String)
  + etreFini() : boolean
  + getLengthY() : int
  + getLength() : int
  + getMur(x : int, y: int) : boolean
  + ramasserObjet()
  + attaquerMonstre()
}


class ObjetRamassable {
    + ObjetRamassable(x : int, y : int)
    + getDegats() : int
}

class Potion{
    + Potion(x : int, y : int)
    + toString() : String
}

class Arme {
    - degats : int
    + Arme(x : int, y : int, dgt : int)
    + getDegats() : int
}

class Dague {
    + Dague(x : int, y : int)
    + toString() : String
}

class Epee{
    + Epee(x : int, y : int)
    + toString() : String
}

class Position {
    x : int
    y : int
    + Position(int x, int y)
    + getX() : int
    + getY() : int
    + setX(x : int)
    + setY(y : int)
    + equals(Position p) : boolean
}

class Perso {
  - meilleureArme : int
  + Perso(x : int, y : int)
  + etrePresent(dx : int, dy : int) : boolean
  + getInventaire() : ArrayList<ObjetRamassable>
  + changerMeilleureArme()
  + getMeilleureDegats() : int
  + getMeilleureArme() : int
}

class Entite {
    - vie : int
    - attaque : int
    + Entite(x : int, y : int, v : int, atq : int)
    + subirDegats(degats : int)
    + getVie() : int
    + getAttaque() : int
}

class Monstre {
  + Monstre(x : int, y : int)
}

class LabyJeu{
+ init()
+ LabyJeu(nom : String)
+ update(seconds: double, clavier: Clavier)
+ etreFini(): boolean
+ getLaby(): Labyrinthe
}

class LabyDessin{
+ dessinerJeu(jeu: Jeu, canvas: Canvas)
}

class ChargerImage {
  + imageMur
  + imagePerso
  + ImageMonstre
  + imageEpee
  + imageDague
  + imagePotion
  + ChargerImage()
  + getImageMur() : Image
  + getImagePerso() : Image
  + getImageMonstre() : Image
  + getImageEpee() : Image
  + getImageDague() : Image
  + getImagePotion() : Image
}
}


LabyJeu "1" --> "1" Labyrinthe : -laby
DessinJeu <|.. LabyDessin
Jeu <|.. LabyJeu
Labyrinthe "1" --> "1" Perso: + pj
LabyJeu <. LabyDessin:uses


ObjetRamassable "*" <-- "0..1" Perso: -inventaire : ArrayList<ObjetRamassable>
ObjetRamassable "*" <-- "0..1" Labyrinthe: -objets : ArrayList<ObjetRamassable>
ObjetRamassable  <|-- "Potion"
ObjetRamassable  <|-- "Arme"
Arme <|-- "Epee"
Arme <|-- "Dague"
Monstre "*" <-- "0..1" Labyrinthe: -monstres : ArrayList<Monstre>
Position <|--  ObjetRamassable
Position <|-- Entite
Entite <|-- Monstre
Entite <|-- Perso

ChargerImage "1" <-- "1" LabyDessin : + images


@enduml